--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link href="/static/teszt.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <div class="game-border" draggable="false">
+    <div class="game-border" id="game-border"  draggable="false">
         <div align="center" class="game-display" id="teszt">
             <img aria-disabled="true" id="gun" class="gun" src="static/gun_1.png" draggable="false">
             <p id="hello">Hello</p>
