--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div id="music-button">Play music</div>
     <div class="game-border" draggable="false">
         <div align="center" class="game-display" id="teszt">
-            <img aria-disabled="true" id="gun" class="gun" src="static/gun_1.png" draggable="false">
+            <img aria-disabled="true" id="gun" class="gun" src="static/images/pistol.gif" draggable="false">
             <p id="hello">Hello</p>
         </div>
     </div>
