add ammo functions

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="music-button">Play music</div>
     <div class="game-border" draggable="false">
-        <div align="center" class="game-display" id="teszt">
+        <div align="center" class="game-display" id="teszt" data-ammo="">
             <img aria-disabled="true" id="gun" class="gun" src="static/images/pistol.gif" draggable="false">
             <p id="hello">Hello</p>
         </div>
