--- a/static/teszt.css
+++ b/static/teszt.css
@@ -23,6 +23,14 @@
     height: 200px;
 }
 
+.bullet{
+    position: relative;
+    top: 85%;
+    left: 40%;
+    height: 50px;
+    width: 25px;
+}
+
 .game-border{
   position: fixed;
   background: white;
