--- a/static/teszt.css
+++ b/static/teszt.css
@@ -13,7 +13,7 @@ body{
   background: black;
   color: white;
   width: 95%;
-  height: 70%;
+  height: 90%;
   transform: translate(-50%, -50%);
   position: absolute;
   top: 50%;
@@ -51,11 +51,11 @@ body{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 800px;
+  height: 600px;
   width: 1200px;
   margin: 0 auto;
   padding: 20px;
-  overflow: auto;
+  overflow: hidden;
   background: none;
 }
 
