--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
                 </tr>
             </table>
             <p id="bullet_indicator">30</p>
+            <p id="enemy_test"></p>
         </div>
     </div>
 </body>
