--- a/static/teszt.css
+++ b/static/teszt.css
@@ -63,3 +63,12 @@ body{
     color: red;
     padding: 1em;
 }
+
+#enemy_test {
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    height: 60px;
+    width: 40px;
+    background: aqua;
+}
