--- a/static/teszt.css
+++ b/static/teszt.css
@@ -1,6 +1,9 @@
 body{
-    background-image: url("https://store-images.s-microsoft.com/image/apps.55453.64809307044061818.61b1d7a1-2194-4bcc-b9a1-d6f87fcc5aed.84f3d2a4-b07d-469b-862f-77488558d157?mode=scale&q=90&h=1080&w=1920&background=%23FFFFFF");
     background-size: cover;
+    background-image: url("/static/images/tv.png");
+    height: 800px;
+    background-position-y: 10%;
+    background-color: black;
 }
 
 #bullet_indicator{
@@ -10,7 +13,6 @@ body{
 }
 
 .game-display {
-    color: white;
     width: 95%;
     height: 90%;
     transform: translate(-50%, -50%);
@@ -20,10 +22,13 @@ body{
     padding: 20px;
     overflow: hidden;
     cursor:url("/static/images/crosshair.png"), auto;
-    border: solid;
     background-size: cover;
     background-position: bottom;
-    background-image: url("cropped.jpg");
+   background-image: url("cropped.jpg");
+    border-radius: 5% / 80%;
+    box-shadow: 1px 1px 20px;
+    opacity: 0.9;
+    border: 6px solid black;
 }
 
 .gun{
@@ -61,11 +66,11 @@ body{
 
 .game-border{
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 49.7%;
+  left: 42%;
   transform: translate(-50%, -50%);
-  height: 600px;
-  width: 1200px;
+  height: 740px;
+  width: 1290px;
   margin: 0 auto;
   padding: 20px;
   overflow: hidden;
