--- a/static/teszt.css
+++ b/static/teszt.css
@@ -1,9 +1,10 @@
 body{
     background-size: cover;
     background-image: url("/static/images/tv.png");
-    height: 800px;
-    background-position-y: 10%;
+    height: 100%;
     background-color: black;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 #bullet_indicator{
@@ -66,11 +67,11 @@ body{
 
 .game-border{
   position: fixed;
-  top: 49.7%;
+  top: 53%;
   left: 41.5%;
   transform: translate(-50%, -50%);
-  height: 46.25rem;
-  width: 80.625rem;
+  height: 80%; /*46.25rem; */
+  width: 70%; /*80.625rem; */
   margin: 0 auto;
   padding: 20px;
   overflow: hidden;
