--- a/static/teszt.css
+++ b/static/teszt.css
@@ -1,10 +1,5 @@
 body{
-    background-size: cover;
-    background-image: url("/static/images/tv.png");
     height: 100%;
-    background-color: black;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
 }
 
 #bullet_indicator{
@@ -14,12 +9,12 @@ body{
 }
 
 .game-display {
-    width: 95%;
-    height: 90%;
+    width: 970px;
+    height: 530px;
     transform: translate(-50%, -50%);
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 45%;
+    left: 41.7%;
     padding: 20px;
     overflow: hidden;
     cursor:url("/static/images/crosshair.png"), auto;
@@ -66,16 +61,17 @@ body{
 }
 
 .game-border{
-  position: fixed;
-  top: 31.25rem;
-  left: 48.125rem;
+  position: absolute;
+  top: 50%;
+  left: 45%;
   transform: translate(-50%, -50%);
-  height: 46.25rem;
-  width: 80.625rem;
+  height: 800px;
+  width: 1400px;
   margin: 0 auto;
   padding: 20px;
   overflow: hidden;
-  background: none;
+  background-image: url("/static/images/tv.png");
+    background-size: cover;
 }
 
 #music-button {
