--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="{{ url_for('static', filename='teszt.js') }}" type="text/javascript" defer></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link href="/static/teszt.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <div id="music-button">Play music</div>
     <div class="game-border" id="game-border"  draggable="false">
         <div align="center" class="game-display" id="teszt">
+            <div class="music-button"><i id="music-button" class="fas fa-volume-off"></i></div>
             <img aria-disabled="true" id="gun" class="gun" src="static/gun_1.png" draggable="false">
             <table>
                 <tr>
