Deal damage to player

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
                 <img class="enemy enemy-3" style="display: none">
             </div>
             <p id="bullet_indicator">30</p>
+            <p id="health">100</p>
             <p id="enemy_test"></p>
         </div>
     </div>
