--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
             <div class="music-button"><i id="music-button" class="fas fa-volume-off"></i></div>
             <img aria-disabled="true" id="gun" class="gun" src="static/gun_1.png" draggable="false">
             <div class="enemies">
-                <img class="enemy enemy-1" style="display: none">
-                <img class="enemy enemy-2" style="display: none">
-                <img class="enemy enemy-3" style="display: none">
+                <img class="enemy enemy-1" style="visibility: hidden">
+                <img class="enemy enemy-2" style="visibility: hidden">
+                <img class="enemy enemy-3" style="visibility: hidden">
             </div>
             <p id="bullet_indicator">30</p>
             <p id="health">100</p>
