--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>DOOM NOCLIP</title>
-    <script src="{{ url_for('static', filename='teszt.js') }}" type="text/javascript" defer></script>
+    <script src="{{ url_for('static', filename='dom.js') }}" type="module"></script>
+    <script src="{{ url_for('static', filename='teszt.js') }}" type="module"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="/static/teszt.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="game-border" id="game-border"  draggable="false">
-        <div align="center" class="game-display" id="teszt">
+        <div class="music-button"></div>
+        <div align="center" class="game-display" id="teszt"></div>
+    </div>
+</body>
+</html>
+
+<!-----------------------------
+
             <div class="music-button"><i id="music-button" class="fas fa-volume-off"></i></div>
             <img aria-disabled="true" id="gun" class="gun" src="static/gun_1.png" draggable="false">
             <div class="enemies">
@@ -19,7 +31,9 @@
             </div>
             <p id="bullet_indicator">30</p>
             <p id="health">100</p>
-        </div>
-    </div>
-</body>
-</html>
+
+
+
+
+
+
