--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,6 @@
     <title>DOOM NOCLIP</title>
     <script src="{{ url_for('static', filename='dom.js') }}" type="module"></script>
     <script src="{{ url_for('static', filename='teszt.js') }}" type="module"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -14,7 +13,7 @@
 </head>
 <body>
     <div class="game-border" id="game-border"  draggable="false">
-        <div class="music-button"></div>
+        <div class="music-button" style="left: 84.5%"></div>
         <div align="center" class="game-display" id="teszt"></div>
     </div>
 </body>
