add back to main page

--- a/templates/high_scores.html
+++ b/templates/high_scores.html
@@ -16,6 +16,9 @@
                     </tr>
                 {% endfor %}
             </table>
+        <form action="{{ url_for('index') }}">
+            <button type="submit" id="back-to-main" class="btn btn-light btn-lg" >Back to main page</button>
+        </form>
         </div>
     </div>
 </body>
