--- a/templates/high_scores.html
+++ b/templates/high_scores.html
@@ -5,20 +5,25 @@
     <title>Datatest</title>
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link href="/static/teszt.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="game-border" id="game-border"  draggable="false">
-        <div align="center" class="game-display" id="teszt">
-            <table>
-                {%  for user in users  %}
-                    <tr>
-                        <td bgcolor="white">{{ user['name'] }} {{ user['high_score'] }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
-        <form action="{{ url_for('index') }}">
-            <button type="submit" id="back-to-main" class="btn btn-light btn-lg" >Back to main page</button>
-        </form>
+        <div align="center" class="high_scores" id="high_scores">
+                <table class="table table-borderless table-dark" id="high_scores_table">
+                    {%  for user in users  %}
+                        <tr>
+                            <td>{{ user['name'] }}</td>
+                            <td>{{ user['high_score'] }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+                <form action="{{ url_for('index') }}">
+                    <button type="submit" id="back-to-main" class="btn btn-warning" >Back to main page</button>
+                </form>
         </div>
     </div>
 </body>
