--- a/templates/high_scores.html
+++ b/templates/high_scores.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Datatest</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='icon.gif') }}">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link href="/static/teszt.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
