--- a/static/teszt.css
+++ b/static/teszt.css
@@ -233,3 +233,18 @@ body{
     left: 50%;
     transform: translate(-50%);
 }
+
+#user_name_input_field {
+    padding-top: 240px;
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translate(-50%);
+}
+
+#player_name_input_submit_button {
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+}
