--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>DOOM NOCLIP</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='icon.gif') }}">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="{{ url_for('static', filename='dom.js') }}" type="module"></script>
     <script src="{{ url_for('static', filename='teszt.js') }}" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
